--- a/css/style.css
+++ b/css/style.css
@@ -12,20 +12,26 @@ body {
 span {
   color: #ee4248;
 }
-
+.header{
+  -webkit-box-shadow: 0px 10px 13px -15px #000000,
+  5px 5px 15px 2px rgba(0, 0, 0, 0);
+box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
+}
 
 .nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  -webkit-box-shadow: 0px 10px 13px -15px #000000,
-    5px 5px 15px 2px rgba(0, 0, 0, 0);
-  box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
+  
 }
 .link a {
   text-decoration: none;
   color: #1f2e35cc;
   margin-right: 50px;
+  transition: 0.4s;
+}
+.link a:hover{
+  color: #ee4248;
 }
 .link {
   display: flex;
@@ -90,7 +96,7 @@ margin-bottom: 10px;
 }
 .container2 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: #f7f7f7;
   margin-top: 250px;
@@ -156,6 +162,6 @@ margin-bottom: 10px;
   justify-content: center;
   font-style: normal;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 21px;
 }
