--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,10 @@ box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
   transition: 0.4s;
 }
 .link a:hover{
-  color: #ee4248;
+  color: #f19093;
+}
+.link a:active{
+  color: #f1292f;
 }
 .link {
   display: flex;
