--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;800;900&display=swap);
-
+*:focus {
+  outline: none;
+}
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -12,17 +14,16 @@ body {
 span {
   color: #ee4248;
 }
-.header{
+.header {
   -webkit-box-shadow: 0px 10px 13px -15px #000000,
-  5px 5px 15px 2px rgba(0, 0, 0, 0);
-box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
+    5px 5px 15px 2px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 .link a {
   text-decoration: none;
@@ -30,10 +31,10 @@ box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
   margin-right: 50px;
   transition: 0.4s;
 }
-.link a:hover{
+.link a:hover {
   color: #f19093;
 }
-.link a:active{
+.link a:active {
   color: #f1292f;
 }
 .link {
@@ -41,16 +42,22 @@ box-shadow: 0px 10px 13px -15px #000000, 5px 5px 15px 2px rgba(0, 0, 0, 0);
   justify-content: center;
   align-items: center;
 }
-.link a:nth-child(4)::after{
-content: "⌵";
-margin-left: 5px;
-margin-bottom: 10px;
-}
-.link a:nth-child(5)::after{
+.link a:nth-child(4)::after {
   content: "⌵";
   margin-left: 5px;
   margin-bottom: 10px;
-  }
+}
+.link a:nth-child(5)::after {
+  content: "⌵";
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+.nav-icon a:hover {
+  opacity: 0.8;
+}
+.nav-icon a:active {
+  opacity: 0.6;
+}
 .main {
   flex-grow: 1;
 }
@@ -91,8 +98,8 @@ margin-bottom: 10px;
   background-color: #ee4248;
   color: #fff;
   border: none;
-  outline: none;
   border-radius: 4px;
+  cursor: pointer;
 }
 .container-2 {
   background-color: #f7f7f7;
